VAN-253 slider-ui icon in thumb alignment issue on 720p screen fixed

--- a/vtr-ui/src/app/components/ui/ui-range-slider/ui-range-slider.component.scss
+++ b/vtr-ui/src/app/components/ui/ui-range-slider/ui-range-slider.component.scss
@@ -23,7 +23,7 @@ but not to any other element on the page. using ::ng-deep
 			}
 			/* slider thumb */
 			.ng5-slider-pointer {
-				top: calc(100% - 1.4rem);
+				top: calc(100% - 1.6rem);
 				height: $thumb-size;
 				width: $thumb-size;
 				border-radius: 2.8rem;
@@ -33,8 +33,8 @@ but not to any other element on the page. using ::ng-deep
 					background: transparent;
 					font-family: FontAwesome;
 					font-size: 1.6rem;
-					top: 2px;
-					left: 6px;
+					top: calc(100% - 2.5rem);
+					left: calc(100% - 2.2rem);
 					font-weight: normal;
 					color: $light;
 					content: "\f07e"; // unicode for font awesome two sided arrow
@@ -45,6 +45,11 @@ but not to any other element on the page. using ::ng-deep
 				&:hover {
 					&::after {
 						background: transparent;
+					}
+				}
+				&.ng5-slider-pointer {
+					&:after {
+						background-color: transparent;
 					}
 				}
 			}
@@ -61,7 +66,7 @@ but not to any other element on the page. using ::ng-deep
 				margin-left: 0.4rem;
 				border-radius: 0;
 				background: $shade_lighter;
-				top: -16px;
+				top: -1.6rem;
 				left: 0.9rem;
 
 				&.ng5-slider-selected {
